# smileyball

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  lefthook.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI_pipeline.yml  backend_deployment.yml  build_frontend.yml  deploy.yml  frontend_deployment.yml  main.yml
src/SmilleyBall_backend/: Cargo.toml
src/SmilleyBall_backend/src/: lib.rs
src/SmilleyBall_frontend/: package.json
src/SmilleyBall_frontend/src/: App.jsx
src/SmilleyBall_frontend/tests/: initial.spec.ts
src/smileyball_backend/: Cargo.toml  smileyball_backend.did  test.did
src/smileyball_backend/src/: contest_data.rs  lib.rs  song.rs  user.rs  utils.rs
src/smileyball_backend/src/contest/: constants.rs  mod.rs  model.rs  repository.rs  router.rs  service.rs
src/smileyball_backend/src/contest/manager/: contest_manager.rs  finalization_manager.rs  lobby_manager.rs  mod.rs  vote_manager.rs
src/smileyball_backend/src/contest/model/: contest.rs  error.rs  mod.rs  stage.rs  vote.rs
src/smileyball_backend/src/contest/service/: contest_service.rs  mod.rs  song_service.rs  vote_service.rs
src/smileyball_backend/src/management/: mod.rs  model.rs  repository.rs  router.rs  service.rs
src/smileyball_backend/src/song/: model.rs
src/smileyball_frontend/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/smileyball_frontend/src/: App.tsx  main.tsx  router.tsx
src/smileyball_frontend/src/components/: BackgroundShapes.tsx  ContentBox.tsx  Logo.tsx  NavBar.tsx  (+7 more)
(+98 files in other folders)
